k8s/namespaces/elasticsearch/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: elasticsearch
  labels:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/part-of: elasticsearch
spec:
  type: NodePort
  ports:
  - port: 9200
    targetPort: 9200
  selector:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/part-of: elasticsearch
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elasticsearch
  labels:
    app.kubernetes.io/name: kibana
    app.kubernetes.io/part-of: elasticsearch
spec:
  type: NodePort
  ports:
  - port: 5601
    targetPort: 5601
  selector:
    app.kubernetes.io/name: kibana
    app.kubernetes.io/part-of: elasticsearch
