k8s/namespaces/elasticsearch/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: elasticsearch
  labels:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/part-of: elasticsearch
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: elasticsearch
  labels:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/part-of: elasticsearch
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
